# aws-ddk

./: .eslintrc.json  .gitattributes  .gitignore  .mergify.yml  .npmignore  .prettierrc.json  .projenrc.js  404.html  API.md  CHANGELOG.md  CONTRIBUTING.md  README.md  _config.yml  feed.xml  index.html  index.markdown  make.bat  package-lock.json  package.json  pyproject.toml  releases.html  releases.markdown  setup.cfg  validate.sh  workshops.html
.github/: PULL_REQUEST_TEMPLATE.md
.projen/: deps.json  files.json  tasks.json
ISSUE_TEMPLATE/: bug_report.yml
_data/: versions.yaml
_layouts/: default.html  home.html
_site/: 404.html  README.md  feed.xml  index.html  make.bat  releases.html
building/: publish.sh
cli/: README.md  pyproject.toml  setup.cfg
cli/aws_ddk/: __init__.py  __main__.py  __metadata__.py  exceptions.py  sh.py  utils.py
cli/aws_ddk/commands/: bootstrap.py  create.py  deploy.py  init.py
cli/aws_ddk/data/cloudformation_templates/: bootstrap.yaml  bootstrap_without_s3_public_access_block.yaml
cli/aws_ddk/data/project_templates/ddk_app/: cookiecutter.json
cli/aws_ddk/data/project_templates/ddk_app/{{cookiecutter.directory_name}}/: README.md  app.py  ddk.json  requirements.txt  setup.py  test.sh
cli/aws_ddk/data/project_templates/ddk_app/{{cookiecutter.directory_name}}/{{cookiecutter.package_name}}/: {{cookiecutter.stack_file_name}}.py
cli/aws_ddk/data/project_templates/ddk_lib/: cookiecutter.json
cli/aws_ddk/data/project_templates/ddk_lib/{{cookiecutter.directory_name}}/: .gitignore  README.md  app.py  cdk.json  ddk.json  setup.py
cli/aws_ddk/data/project_templates/ddk_lib/{{cookiecutter.directory_name}}/ddk_lib/: artifactory_stack.py
cli/aws_ddk/data/project_templates/ddk_lib/{{cookiecutter.directory_name}}/ddk_lib/stages/: dummy_stage.py
cli/aws_ddk/services/: cfn.py  codecommit.py
cli/tests/unit/: test_cli.py
core/: README.md  pyproject.toml  setup.cfg
core/aws_ddk_core/: __metadata__.py
core/aws_ddk_core/base/: __init__.py  stack.py
core/aws_ddk_core/cicd/: __init__.py  _utils.py  actions.py  pipeline.py
core/aws_ddk_core/config/: __init__.py  config.py
core/aws_ddk_core/pipelines/: __init__.py  pipeline.py  stage.py  state_machine_stage.py
core/aws_ddk_core/resources/: __init__.py  _databrew.py  _dms.py  _firehose.py  _glue.py  _kinesis.py  _kinesis_firehose.py  _kinesis_streams.py  _kinesisfirehose.py  _kms.py  _lambda.py  _s3.py  _sfn.py  _sns.py  _sqs.py  _utils.py  commons.py
core/aws_ddk_core/stages/: __init__.py  appflow.py  appflow_ingestion.py  athena_sql.py  databrew_transform.py  dms_s3_to_s3.py  firehose_s3.py  glue.py  glue_transform.py  kinesis_s3.py  s3_event.py  sns_lambda.py  sqs_lambda.py
core/aws_ddk_core/stages/lambda_handlers/appflow_check_flow_status/: lambda_function.py
core/tests/: __init__.py
core/tests/unit/: conftest.py  test_appflow_stage.py  test_athena_sql_stage.py  test_base_stack.py  test_basic_data_pipeline.py  test_cicd_pipeline_stack.py  test_config.py  test_data_stage.py  test_databrew_transform_stage.py  test_dms.py  test_dms_stages.py  test_firehose.py  test_firehose_s3_stage.py  test_glue.py  test_glue_stage.py  test_glue_transform_stage.py  test_kinesis.py  test_kinesis_firehose.py  test_kinesis_s3_stage.py  test_kinesis_streams.py  test_kms.py  test_lambda.py  test_resource_utils.py  test_s3.py  test_s3_event_stage.py  test_sfn.py  test_sns.py  test_sns_lambda_stage.py  test_sqs.py  test_sqs_lambda_stage.py  test_state_machine_stage.py
docs/: .gitignore  Gemfile  README.md  _config.yml  index.markdown  releases.markdown  workshops.markdown
integ/: integ.airflow-pipeline.test.ts  integ.appflow-ingestion.test.ts  integ.athena-sql.test.ts  integ.cicd-pipeline.test.ts  integ.data-pipelines.assertions.test.ts  integ.data-pipelines.test.ts  integ.databrew-transform.test.ts  integ.glue-transform.test.ts  integ.kinesis-s3-stage.test.ts  integ.mwaa-trigger.test.ts  integ.s3-event.test.ts  integ.sns-lambda.test.ts  integ.sqs-lambda.test.ts
release/: index.html
source/: requirements.txt  requirements_cli.txt  requirements_core.txt
src/: index.ts
test/: airflow-pipeline.test.ts  appflow-ingestion-stage.test.ts  athena-sql-stage.test.ts  base-stack.test.ts  cicd-pipeline-stack.test.ts  config.test.ts  data-pipelines.test.ts  databrew-transform-stage.test.ts  emr-serverless-cluster.test.ts  emr-serverless-stage.test.ts  glue-factory.test.ts  glue-transform-stage.test.ts  kinesis-s3-stage.test.ts  kms-defaults.test.ts  kms-factory.test.ts  mwaa-environment.test.ts  mwaa-trigger-dags-stage.test.ts  redshift-data-api-stage.test.ts  s3-event.test.ts  s3-factory.test.ts  sfn-stage.test.ts  sns-factory.test.ts  sns-lambda-stage.test.ts  (+3 more)
(+879 files in other folders)
