[tool.poetry]
name = "aws-ddk-dev"
version = "0.3.0"
description = "AWS DataOps Development Kit"
authors = [
    "AWS Professional Services <aws-proserve-opensource@amazon.com>"
]
license = "Apache-2.0"
readme = "README.md"

keywords = ["aws", "ddk", "dataops"]

homepage = "TBD"
repository = "https://github.com/awslabs/aws-ddk"
documentation = "TBD"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
boto3-stubs-lite = {version = "*", extras = ["codecommit", "cloudformation", "sts"]}
bump2version = "^1.0.1"
cfn-lint = "^0.56.4"
doc8 = "^0.10.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
typing-extensions = "^4.1.1"

[tool.black]
line-length = 120
target-version = ["py36", "py37", "py38"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | .vscode
  | .cdk.out
  | .out
  | dev
  | .coverage
  | data
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
py_version = 37
skip_gitignore = true

[tool.mypy]
python_version = 3.7
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
exclude = "(data|tests)"