[tool.poetry]
name = "aws-ddk"
version = "0.1.2"
description = "AWS DataOps Development Kit - CLI"
authors = [
    "AWS Professional Services <aws-proserve-opensource@amazon.com>"
]
license = "Apache-2.0"
readme = "README.md"

include = ["README.md", "LICENSE.txt", "NOTICE.txt", "THIRD_PARTY.txt"]

exclude = ["*.so", "*.pyc", "*~", "#*", ".git*", ".coverage*", "DS_Store", "__pycache__"]

keywords = ["aws", "ddk", "dataops", "cli"]

homepage = "https://github.com/awslabs/aws-ddk"
repository = "https://github.com/awslabs/aws-ddk"
documentation = "https://awslabs.github.io/aws-ddk/"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
boto3 = "^1.20.37"
botocore = "^1.23.37"
click = "^8.0.3"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]
docker = "^5.0.0"
moto = "^2.2.12"
pytest = "^6.2.5"
PyYAML = "^5.4.1"

[tool.poetry.scripts]
ddk = "aws_ddk.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"